--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
         <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css">
         <link rel="stylesheet" href="./styles/main.css">
         
         <script src="./scripts/SCRIPTING.js"></script>
@@ -52,9 +53,11 @@
         <nav id = "intro" class="text-center section">
 
             <h1 id="main_heading">Raphael Khan</h1>
-
-
-
+            <div>
+            <a href="https://www.linkedin.com/in/raphael-khan-731448230" target="_blank" alt="my LinkedIn">
+                <img src="images/LinkedIn.png" width="30" alt="LinkedIn Logo" class="image_link">
+            </a>
+            </div>
 
 
         </nav>
