Done the primary page

--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
             <nav class= "d-none d-sm-block">
                 <ul>
                     <li>
-                        About Me
+                        <a href="#profile">About Me</a>
                     </li>
                     <li>
-                        My Projects
+                        <a href="#education">Resume</a>
                     </li>
                     <li>
                         My Passions
@@ -53,9 +53,12 @@
         <nav id = "intro" class="text-center section">
 
             <h1 id="main_heading">Raphael Khan</h1>
-            <div>
+            <div class="d-flex contacts">
             <a href="https://www.linkedin.com/in/raphael-khan-731448230" target="_blank" alt="my LinkedIn">
-                <img src="images/LinkedIn.png" width="30" alt="LinkedIn Logo" class="image_link">
+                <img src="images/LinkedIn.png"  alt="LinkedIn Logo" class="image_link">
+            </a>
+            <a href="mailto:rkhan461@mtroyal.ca" target="_blank" alt="Email me!">
+                <img src="images/email.png" alt="An email logo" class="image_link">
             </a>
             </div>
             <button class="next-section" onclick ="scrollPast(this)" alt="button to skip section"><img src="images/down.png"  alt="a down pointing arrow"></button>
