Added the Hamburgler

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
         </header>
 
-        <button id = "hamburgher" onclick="hamburgher()">hamburgher</button>
+        <button id = "hamburgher" onclick="hamburgher()"><img src="images/hamburgher.png"></button>
 
 
         <nav id = "intro" class="text-center section">
