Forgot some titles

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <body>
 
      
-        <a href="#main-content" class="skip-navigation">Skip Navigation</a>
+        <a href="#main-content" class="skip-navigation" title="navigation skipper">Skip Navigation</a>
         <button id="dark_mode" onclick="myFunction()">Night Mode</button>
 
               
@@ -52,7 +52,7 @@
 
         </header>
 
-        <button id = "hamburgher" onclick="hamburgher()"><img src="images/hamburgher.png" title="Hamburger menu"></button>
+        <button id = "hamburgher" onclick="hamburgher()"  title="Hamburger menu"><img src="images/hamburgher.png"></button>
 
         <main>
         <nav id = "intro" class="text-center section">
