Last last minute change

--- a/passions.html
+++ b/passions.html
@@ -74,10 +74,80 @@
             <div class="transcript" title="Video Transcript">
 
 
-                <p>A weird dude with a chipped tooth, messy hair and Red shirt is speaking</p>
+                <p>A weird dude with a chipped tooth, messy hair and Red shirt is singing</p>
 
-                <p>"So uhh, we need to make a video for this assignment, this is the only way I can keep it under size</p>
+                <p>There once was a ship that put to sea
+                The name of the ship was the Billy O' Tea
+                The winds blew up, her bow dipped down
+                Oh blow, my bully boys, blow (huh)</p>
 
+                <p>Soon may the Wellerman come
+                To bring us sugar and tea and rum
+                One day, when the tonguing is done
+                We'll take our leave and go</p>
+
+                <p>She'd not been two weeks from shore
+                When down on her a right whale bore
+                The captain called all hands and swore
+                He'd take that whale in tow (huh)</p>
+
+                <p>Soon may the Wellerman come
+                To bring us sugar and tea and rum
+                One day, when the tonguing is done
+                We'll take our leave and go</p>
+
+                <p>Da-da-da-da-da
+                Da-da-da-da-da-da-da
+                Da-da-da-da-da-da-da-da-da-da-da</p>
+
+                <p>Before the boat had hit the water
+                The whale's tail came up and caught her
+                All hands to the side, harpooned and fought her
+                When she dived down low (huh)</p>
+
+                <p>Soon may the Wellerman come
+                To bring us sugar and tea and rum
+                One day, when the tonguing is done
+                We'll take our leave and go</p>
+
+                <p>No line was cut, no whale was freed
+                The captain's mind was not of greed
+                And he belonged to the Whaleman's creed
+                She took that ship in tow (huh)</p>
+
+                <p> Soon may the Wellerman come
+                To bring us sugar and tea and rum
+                One day, when the tonguing is done
+                We'll take our leave and go</p>
+
+                <p> Da-da-da-da-da
+                Da-da-da-da-da-da-da
+                Da-da-da-da-da-da-da-da-da-da-da</p>
+
+                <p>For forty days or even more
+                The line went slack then tight once more
+                All boats were lost, there were only four
+                But still that whale did go (huh)</p>
+
+                <p>Soon may the Wellerman come
+                To bring us sugar and tea and rum
+                One day, when the tonguing is done
+                We'll take our leave and go</p>
+
+                <p>As far as I've heard, the fight's still on
+                The line's not cut, and the whale's not gone
+                The Wellerman makes his regular call
+                To encourage the captain, crew and all (huh)</p>
+
+                <p> Soon may the Wellerman come
+                To bring us sugar and tea and rum
+                One day, when the tonguing is done
+                We'll take our leave and go</p>
+
+                <p>Soon may the Wellerman come
+                To bring us sugar and tea and rum
+                One day, when the tonguing is done
+                We'll take our leave and go</p> 
         </div>
             <button class="next-section" id = "backtoTop" onclick ="Top()" title="Click to return to the top"><img src="images/down.png"  alt="an up pointing arrow"></button>
         </div>
